--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --grey-bcg: #f5f4fa;
   --second-accent-color: #188ce8;
   --social-icons: #afb1b8;
+  --hero-bg: #C4C4C4
 }
 
 body {
@@ -172,13 +173,12 @@ header {
 }
 
 .hero {
-  background-color: var(--dark-bcg);
+  background-color: var(--hero-bg);
   padding: 200px 0px;
 }
 
 .overlay {
   max-width: 1600px;
-  max-height: 600px;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -214,6 +214,7 @@ header {
   padding: 10px 32px;
   cursor: pointer;
   margin-top: 30px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .btn {
@@ -253,7 +254,6 @@ header {
   display: flex;
   justify-content: space-between;
   text-align: left;
-  max-height: 98px;
 }
 
 .advantage-list-item {
@@ -275,6 +275,10 @@ header {
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: var(--main-color);
+}
+
+.feauters{
+  padding-bottom: 0;
 }
 
 .feauters-container {
@@ -343,6 +347,7 @@ header {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-color);
+  margin-bottom: 16px;
 }
 
 .socials {
@@ -471,7 +476,7 @@ header {
 
 .footer-both-sections {
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 .contacts {
   display: block;
@@ -494,14 +499,13 @@ header {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--second-color);
+  text-align: left;
+  margin-bottom: 20px;
 }
 .footer-social {
-  display: flex;
   margin-left: 70px;
-  width: 206px;
-  height: 80px;
   flex-wrap: wrap;
-  align-content: space-between;
+  
 }
 
 .footer-socials-list {
@@ -546,6 +550,9 @@ header {
   gap: 8px;
 }
 
+.portfolio-card {
+  display: block;
+}
 .portfolio-card:hover,
 .portfolio-card:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
